# QuickHull_rust

./: Cargo.toml  LICENSE
src/: lib.rs  main.rs  parser.rs  quick_hull.rs
