[package]
name = "DA_ConvexHull"
version = "0.1.0"
authors = ["Arne Jacobs <Arne.Jacobs@UGent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
rand = "0.8.3"
rayon = "1.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"